# Quad-retris

./: Block.cc  CMakeLists.txt  IBlock.cpp  JBlock.cpp  LBlock.cpp  Makefile  OBlock.cpp  README.md  SBlock.cpp  TBlock.cpp  UML_QUADRIS  ZBlock.cpp  basic.txt  gameOver.txt  level2test.txt  level4HeavyCheck.txt  main.cpp  rotateMadePossible.txt  rotateNotPossible.txt  seqFileInFile.txt  sequence.txt  test.sh
Controller/: Controller.cc
controller/: Block.cpp  Block.h  Controller.cc  Controller.h  IBlock.cpp  IBlock.h  JBlock.cpp  JBlock.h  LBlock.cpp  LBlock.h  Level.cc  Level.h  Level0.cc  Level0.h  Level1.cc  Level1.h  Level2.cc  Level2.h  Level3.cc  Level3.h  Level4.cc  Level4.h  OBlock.cpp  OBlock.h  SBlock.cpp  SBlock.h  TBlock.cpp  TBlock.h  ZBlock.cpp  ZBlock.h
model/: Cell.cc  Cell.h  Grid.cc  Grid.h  Info.h  Observer.h  State.h  Subject.cc  Subject.h
view/: TextDisplay.cc  TextDisplay.h  graphicsdisplay.cc  graphicsdisplay.d  graphicsdisplay.h
